# duckdb-onnx

./: .gitignore  .gitmodules  CMakeLists.txt
data/csv/: house_16H.csv  house_16H_10.csv  iris_features.csv
data/model/: house_16H_d5_l25_n49_20240905072107.onnx  house_16H_d5_l25_n49_20240905072107_out.onnx  output_model.onnx
examples/convert_model/: CMakeLists.txt  convert.cpp  convert.py  train.py
examples/convert_model/models/: decision_tree_model.pkl
examples/embedded-c++/: CMakeLists.txt  decision_tree_wine.onnx  decision_tree_wine_.onnx  main.cpp  main.cpp.template  simple_linear_regression.onnx  train.py
examples/embedded-c++-udf/: CMakeLists.txt  Makefile  decision_tree_model.pkl  main.cpp  train.py
src/: CMakeLists.txt
src/include/duckdb/planner/: bound_tokens.hpp
src/include/duckdb/planner/expression/: bound_onnx_expression.hpp  list.hpp
src/include/duckdb/plugin/physical/execution/: expression_executor.hpp
src/planner/expression/: bound_onnx_expression.cpp
src/plugin/physical/execution/: expression_executor.cpp
src/plugin/physical/execution/expression_executor/: CMakeLists.txt  execute_onnx.cpp
test/: CMakeLists.txt
test/extension/: CMakeLists.txt  loadable_extension_demo.cpp  loadable_extension_optimizer_demo.cpp
